5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4342/executions/1630_2944.log
== TEST (2019-04-02 16:05:10) 
-- CODE:
panqueca=int(input("Digite o numero de panquecas:"))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    MP= float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:07:25) 
-- CODE:
panqueca=int(input("Digite o numero de panquecas:"))
numovo=int(panqueca*1)
volleite=int(panqueca*180)
pesofar=int(panqueca*110)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    MP= float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:07:35) 
-- CODE:
panqueca=int(input("Digite o numero de panquecas:"))
numovo=int(panqueca*1)
volleite=int(panqueca*180)
pesofar=int(panqueca*110)
print(numovo)
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:11:44) 
-- CODE:
panqueca=int(input("Digite o numero de panquecas:"))
numovos=int(panqueca/8)
volleite=int(panqueca*180)/8
massafar=int(panqueca*110)/8
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:12:10) 
-- CODE:
panqueca=int(input("Digite o numero de panquecas:"))
numovos=int(panqueca/8)
volleite=int(panqueca*180)/8
massafar=int(panqueca*110)/8
print(numovos)
print(volleite)
print(massafar)
-- OUTPUT:
0
90.0
55.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:12:28) 
-- CODE:
panqueca=int(input("Digite o numero de panquecas:"))
numovos=input(panqueca/8)
volleite=int(panqueca*180)/8
massafar=int(panqueca*110)/8
print(numovos)
print(volleite)
print(massafar)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    numovos=input(panqueca/8)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:12:42) 
-- CODE:
panqueca=int(input("Digite o numero de panquecas:"))
numovos=input(panqueca/8)
volleite=input(panqueca*180)/8
massafar=input(panqueca*110)/8
print(numovos)
print(volleite)
print(massafar)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    numovos=input(panqueca/8)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:13:10) 
-- CODE:
panqueca=int(input("Digite o numero de panquecas:"))
numovos=input(panqueca/8)
volleite=int(panqueca*180)/8
massafar=int(panqueca*110)/8
print(numovos)
print(volleite)
print(massafar)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    numovos=input(panqueca/8)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:14:08) 
-- CODE:
panqueca=int(input("Digite o numero de panquecas:"))
numovos=input(panqueca/8)
volleite=int(panqueca*180)/8
massafar=int(panqueca*110)/8
print(numovos)
print(volleite)
print(massafar)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    numovos=input(panqueca/8)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:14:09) 
-- CODE:
panqueca=int(input("Digite o numero de panquecas:"))
numovos=input(panqueca/8)
volleite=int(panqueca*180)/8
massafar=int(panqueca*110)/8
print(numovos)
print(volleite)
print(massafar)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    numovos=input(panqueca/8)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:14:38) 
-- CODE:
panqueca=int("Digite o numero de panquecas:"))
numovos=input(panqueca/8)
volleite=int(panqueca*180)/8
massafar=int(panqueca*110)/8
print(numovos)
print(volleite)
print(massafar)
-- ERROR:
File "XXXX", line 1
    panqueca=int("Digite o numero de panquecas:"))
                                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:14:47) 
-- CODE:
panqueca=int("Digite o numero de panquecas:")
numovos=input(panqueca/8)
volleite=int(panqueca*180)/8
massafar=int(panqueca*110)/8
print(numovos)
print(volleite)
print(massafar)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    panqueca=int("Digite o numero de panquecas:")
ValueError: invalid literal for int() with base 10: 'Digite o numero de panquecas:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:14:59) 
-- CODE:
panqueca=int(input("Digite o numero de panquecas:"))
numovos=input(panqueca/8)
volleite=int(panqueca*180)/8
massafar=int(panqueca*110)/8
print(numovos)
print(volleite)
print(massafar)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    numovos=input(panqueca/8)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:15:23) 
-- CODE:
panqueca=int(input("Digite o numero de panquecas:"))
numovos=input(panqueca/8)
print(numovos)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    numovos=input(panqueca/8)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:16:25) 
-- CODE:
panqueca=int(input("Digite o numero de panquecas:"))
numovos=input(panqueca/8)
print(numovos)
panqueca=int(input("Digite o numero de panquecas:"))
volleite=input(panqueca*180)/8
print(voleite)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    numovos=input(panqueca/8)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:16:44) 
-- CODE:
panqueca=int(input("Digite o numero de panquecas:"))
numovos=input(panqueca/8)
print(numovos)
panqueca=int(input("Digite o numero de panquecas:"))
volleite=int(panqueca*180)/8
print(voleite)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    numovos=input(panqueca/8)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:17:16) 
-- CODE:
panqueca=int(input("Digite o numero de panquecas:"))
numovos=input(panqueca/8)
print(numovos)
panqueca=int(input("Digite o numero de panquecas:"))
volleite=input(panqueca*180)/8
print(voleite)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    numovos=input(panqueca/8)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:17:37) 
-- CODE:
panqueca=int(input("Digite o numero de panquecas:"))
numovos=input(panqueca/8)
print(numovos)
panqueca=int(input("Digite o numero de panquecas:"))
volleite=input(panqueca*180)//8
print(voleite)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    numovos=input(panqueca/8)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:17:43) 
-- CODE:
panqueca=int(input("Digite o numero de panquecas:"))
numovos=input(panqueca/8)
print(numovos)
panqueca=int(input("Digite o numero de panquecas:"))
volleite=input(panqueca*180)//8
print(voleite)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    numovos=input(panqueca/8)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:18:06) 
-- CODE:
panqueca=int(input("Digite o numero de panquecas:"))
numovos=input(panqueca/8)
print(numovos)
panqueca=int(input("Digite o numero de panquecas:"))
volleite=input((panqueca*180)/8)
print(voleite)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    numovos=input(panqueca/8)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:19:05) 
-- CODE:
panqueca=int(input("Digite o numero de panquecas:"))
numovos=input(panqueca/8)
print(numovos)
panqueca=int(input("Digite o numero de panquecas:"))
volleite=input((panqueca*180)/8)
print(voleite)
panqueca=int(input("Digite o numero de panquecas:"))
massafar=(input(panqueca*110)/8)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    numovos=input(panqueca/8)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:19:30) 
-- CODE:
panqueca=int(input("Digite o numero de panquecas:"))
numovos=input(panqueca/8)
print(numovos)
panqueca=int(input("Digite o numero de panquecas:"))
volleite=input((panqueca*180)/8)
print(voleite)
panqueca=int(input("Digite o numero de panquecas:"))
massafar=(input(panqueca*110)/8)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    numovos=input(panqueca/8)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:19:48) 
-- CODE:
panqueca=int(input("Digite o numero de panquecas:"))
numovos=input(panqueca/8)
print(numovos)
panqueca=int(input("Digite o numero de panquecas:"))
volleite=input((panqueca*180)/8)
print(voleite)
panqueca=int(input("Digite o numero de panquecas:"))
massafar=(input(panqueca*110)/8)
print(massafar)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    numovos=input(panqueca/8)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:20:02) 
-- CODE:
panqueca=int(input("Digite o numero de panquecas:"))
numovos=input(panqueca/8)
print(numovos)
panqueca=int(input("Digite o numero de panquecas:"))
volleite=input((panqueca*180)/8)
print(volleite)
panqueca=int(input("Digite o numero de panquecas:"))
massafar=(input(panqueca*110)/8)
print(massafar)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    numovos=input(panqueca/8)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:20:22) 
-- CODE:
panqueca=int(input("Digite o numero de panquecas:"))
numovos=input(panqueca/8)
print(numovos)
panqueca=int(input("Digite o numero de panquecas:"))
volleite=input((panqueca*180)/8)
print(volleite)
panqueca=int(input("Digite o numero de panquecas:"))
massafar=int(input(panqueca*110)/8)
print(massafar)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    numovos=input(panqueca/8)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:20:47) 
-- CODE:
panqueca=int(input("Digite o numero de panquecas:"))
numovos=input(panqueca/8)
print(numovos)
panqueca=int(input("Digite o numero de panquecas:"))
volleite=input((panqueca*180)/8)
print(volleite)
panqueca=int(input("Digite o numero de panquecas:"))
massafar=input(panqueca*110)/8)
print(massafar)


-- ERROR:
File "XXXX", line 8
    massafar=input(panqueca*110)/8)
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:21:10) 
-- CODE:
panqueca=int(input("Digite o numero de panquecas:"))
numovos=input(panqueca/8)
print(numovos)
panqueca=int(input("Digite o numero de panquecas:"))
volleite=input((panqueca*180)/8)
print(volleite)
panqueca=int(input("Digite o numero de panquecas:"))
massafar=input((panqueca*110)/8)
print(massafar)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    numovos=input(panqueca/8)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:21:16) 
-- CODE:
panqueca=int(input("Digite o numero de panquecas:"))
numovos=input(panqueca/8)
print(numovos)
panqueca=int(input("Digite o numero de panquecas:"))
volleite=input((panqueca*180)/8)
print(volleite)
panqueca=int(input("Digite o numero de panquecas:"))
massafar=input((panqueca*110)/8)
print(massafar)


-- EXECUTION TIME:
0.201518
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2944/main.py", line 2, in <module>
    numovos=input(panqueca/8)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:21:31) 
-- CODE:
panqueca=int(input("Digite o numero de panquecas:"))
numovos=input(panqueca/8)
print(numovos)
panqueca=int(input("Digite o numero de panquecas:"))
volleite=input((panqueca*180)/8)
print(volleite)
panqueca=int(input("Digite o numero de panquecas:"))
massafar=input((panqueca*110)/8)
print(massafar)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    numovos=input(panqueca/8)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:22:02) 
-- CODE:
panqueca=int(input("Digite o numero de panquecas:"))
numovos=input(panqueca/8)
print(numovos)

volleite=input((panqueca*180)/8)
print(volleite)

massafar=input((panqueca*110)/8)
print(massafar)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    numovos=input(panqueca/8)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:23:02) 
-- CODE:
panqueca=float(input("Digite o numero de panquecas:"))
numovos=input(panqueca/8)

print(numovos)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    numovos=input(panqueca/8)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:23:55) 
-- CODE:
panqueca=float(input("Digite o numero de panquecas:"))
numovos=input(panqueca/8)
volleite=input((panqueca*180)/8)
print(numovos)
print(volleite)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    numovos=input(panqueca/8)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:24:42) 
-- CODE:
panqueca=float(input("Digite o numero de panquecas:"))
numovos=input(panqueca/8)
volleite=input((panqueca*180)/8)
massafar=input((panqueca*110)/8)
print(numovos)
print(volleite)
print(massafar)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    numovos=input(panqueca/8)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:24:46) 
-- CODE:
panqueca=float(input("Digite o numero de panquecas:"))
numovos=input(panqueca/8)
volleite=input((panqueca*180)/8)
massafar=input((panqueca*110)/8)
print(numovos)
print(volleite)
print(massafar)



-- EXECUTION TIME:
0.193299
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2944/main.py", line 2, in <module>
    numovos=input(panqueca/8)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:25:12) 
-- CODE:
panqueca=int(input("Digite o numero de panquecas:"))
numovos=int(panqueca/8)
volleite=int((panqueca*180)/8)
massafar=int((panqueca*110)/8)
print(numovos)
print(volleite)
print(massafar)



-- OUTPUT:
0
90
55
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:25:31) 
-- CODE:
panqueca=int(input("Digite o numero de panquecas:"))
numovos=int(panqueca/8)
volleite=int((panqueca*180)/8)
massafar=int((panqueca*110)/8)
print(numovos)
print(volleite)
print(massafar)



-- EXECUTION TIME:
0.133656
-- TEST CASE 1:
---- input:
4
---- correct output:
0.5
90.0
55.0
---- user output:
0
90
55
-- TEST CASE 2:
---- input:
20
---- correct output:
2.5
450.0
275.0
---- user output:
2
450
275
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:25:43) 
-- CODE:
panqueca=int(input("Digite o numero de panquecas:"))
numovos=input(panqueca/8)
volleite=input((panqueca*180)/8)
massafar=input((panqueca*110)/8)
print(numovos)
print(volleite)
print(massafar)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    numovos=input(panqueca/8)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:25:51) 
-- CODE:
panqueca=int(input("Digite o numero de panquecas:"))
numovos=input(panqueca/8)
volleite=input((panqueca*180)/8)
massafar=input((panqueca*110)/8)
print(numovos)
print(volleite)
print(massafar)



-- EXECUTION TIME:
0.151604
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2944/main.py", line 2, in <module>
    numovos=input(panqueca/8)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:26:01) 
-- CODE:
panqueca=int(input("Digite o numero de panquecas:"))
numovos=input(panqueca/8)
volleite=input((panqueca*180)/8)
massafar=input((panqueca*110)/8)
print(numovos)
print(volleite)
print(massafar)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    numovos=input(panqueca/8)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:29:44) 
-- CODE:
panqueca=int(7)
numovos=input(panqueca/8)
volleite=input((panqueca*180)/8)
massafar=input((panqueca*110)/8)
print(numovos)
print(volleite)
print(massafar)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    volleite=input((panqueca*180)/8)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:29:52) 
-- CODE:
panqueca=int(7)
numovos=input(panqueca/8)
volleite=input((panqueca*180)/8)
massafar=input((panqueca*110)/8)
print(numovos)
print(volleite)
print(massafar)



-- EXECUTION TIME:
0.181307
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2944/main.py", line 3, in <module>
    volleite=input((panqueca*180)/8)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:29:56) 
-- CODE:
panqueca=int(7)
numovos=input(panqueca/8)
volleite=input((panqueca*180)/8)
massafar=input((panqueca*110)/8)
print(numovos)
print(volleite)
print(massafar)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    volleite=input((panqueca*180)/8)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:30:02) 
-- CODE:
panqueca=int(7)
numovos=input(panqueca/8)
volleite=input((panqueca*180)/8)
massafar=input((panqueca*110)/8)
print(numovos)
print(volleite)
print(massafar)



-- EXECUTION TIME:
0.197155
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2944/main.py", line 3, in <module>
    volleite=input((panqueca*180)/8)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:42:58) 
-- CODE:
panqueca=int(input("Digite o numero de panquecas:"))
numovos=(panqueca/8)
volleite=(panqueca*180)/8
massafar=(panqueca*110)/8
print(numovos)
print(volleite)
print(massafar)



-- OUTPUT:
0.5
90.0
55.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:43:02) 
-- CODE:
panqueca=int(input("Digite o numero de panquecas:"))
numovos=(panqueca/8)
volleite=(panqueca*180)/8
massafar=(panqueca*110)/8
print(numovos)
print(volleite)
print(massafar)



-- EXECUTION TIME:
0.171702
-- TEST CASE 1:
---- input:
4
---- correct output:
0.5
90.0
55.0
---- user output:
0.5
90.0
55.0
-- TEST CASE 2:
---- input:
20
---- correct output:
2.5
450.0
275.0
---- user output:
2.5
450.0
275.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
